# Gauntlet

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  SKILL.md  ci.yml  conftest.py  docker-compose.yml  make.bat  pyproject.toml  test_gauntlet.py
docs/: ARCHITECTURE.md  CURSOR_PROMPT.md  MCP_SETUP.md
gauntlet/: __init__.py  cli.py  config.py  mcp_server.py  reporting.py  tracing.py
gauntlet/agents/: adversarial.py  judge.py  report.py  scenario.py
gauntlet/api/: app.py
gauntlet/core/: models.py  runner.py
gauntlet/storage/: db.py
tests/: test_gauntlet.py  test_models.py
